// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button basic usage 1`] = `
<button
  className="btn"
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  type="button"
>
  Click me and check the console!
</button>
`;

exports[`Storyshots CheckBox basic usage 1`] = `
<div
  className="form-group"
>
  <input
    aria-checked={false}
    defaultChecked={false}
    disabled={false}
    id="asInput1"
    name="checkbox"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    htmlFor="asInput1"
  >
    check me out!
  </label>
</div>
`;

exports[`Storyshots CheckBox call a function 1`] = `
<div
  className="form-group"
>
  <input
    aria-checked={false}
    defaultChecked={false}
    disabled={false}
    id="asInput4"
    name="checkbox"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    htmlFor="asInput4"
  >
    check out the console
  </label>
</div>
`;

exports[`Storyshots CheckBox default checked 1`] = `
<div
  className="form-group"
>
  <input
    aria-checked={true}
    defaultChecked={true}
    disabled={false}
    id="asInput3"
    name="checkbox"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    htmlFor="asInput3"
  >
    (un)check me out
  </label>
</div>
`;

exports[`Storyshots CheckBox disabled 1`] = `
<div
  className="form-group"
>
  <input
    aria-checked={false}
    defaultChecked={false}
    disabled={true}
    id="asInput2"
    name="checkbox"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    htmlFor="asInput2"
  >
    you cannot check me out
  </label>
</div>
`;

exports[`Storyshots Dropdown basic usage 1`] = `
<div
  className="dropdown"
>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    className="dropdown-toggle btn btn-light"
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    Search Engines
  </button>
  <div
    aria-hidden={true}
    aria-label="Search Engines"
    className="dropdown-menu"
    role="menu"
  >
    <a
      className="dropdown-item"
      href="https://google.com"
      onKeyDown={[Function]}
      role="menuitem"
    >
      Google
    </a>
    <a
      className="dropdown-item"
      href="https://duckduckgo.com"
      onKeyDown={[Function]}
      role="menuitem"
    >
      DuckDuckGo
    </a>
    <a
      className="dropdown-item"
      href="https://yahoo.com"
      onKeyDown={[Function]}
      role="menuitem"
    >
      Yahoo
    </a>
  </div>
</div>
`;

exports[`Storyshots HyperLink minimal usage 1`] = `
<a
  href="https://en.wikipedia.org/wiki/Hyperlink"
  onClick={[Function]}
  target="_self"
>
  edX.org
</a>
`;

exports[`Storyshots HyperLink with blank target 1`] = `
<a
  href="https://www.edx.org"
  onClick={[Function]}
  target="_blank"
>
  edX.org
  <span>
     
    <span
      aria-hidden={false}
      aria-label="Opens in a new window"
      className="fa fa-external-link"
      title="Opens in a new window"
    />
  </span>
</a>
`;

exports[`Storyshots HyperLink with onClick 1`] = `
<a
  href="https://www.edx.org"
  onClick={[Function]}
  target="_blank"
>
  edX.org
  <span>
     
    <span
      aria-hidden={false}
      aria-label="Opens in a new window"
      className="fa fa-external-link"
      title="Opens in a new window"
    />
  </span>
</a>
`;

exports[`Storyshots InputSelect basic usage 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="asInput5"
  >
    Fruits
  </label>
  <select
    aria-describedby={undefined}
    className="form-control"
    id="asInput5"
    name="fruits"
    onBlur={[Function]}
    onChange={[Function]}
    type="select"
    value="strawberry"
  >
    <option
      value="apple"
    >
      apple
    </option>
    <option
      value="orange"
    >
      orange
    </option>
    <option
      value="strawberry"
    >
      strawberry
    </option>
    <option
      value="banana"
    >
      banana
    </option>
  </select>
</div>
`;

exports[`Storyshots InputSelect separate labels and values 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="asInput6"
  >
    New England States
  </label>
  <select
    aria-describedby={undefined}
    className="form-control"
    id="asInput6"
    name="new-england-states"
    onBlur={[Function]}
    onChange={[Function]}
    type="select"
    value="RI"
  >
    <option
      value="CN"
    >
      Connecticut
    </option>
    <option
      value="ME"
    >
      Maine
    </option>
    <option
      value="MA"
    >
      Massachusetts
    </option>
    <option
      value="NH"
    >
      New Hampshire
    </option>
    <option
      value="RI"
    >
      Rhode Island
    </option>
    <option
      value="VT"
    >
      Vermont
    </option>
  </select>
</div>
`;

exports[`Storyshots InputSelect separate option groups 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="asInput7"
  >
    Northeast States
  </label>
  <select
    aria-describedby={undefined}
    className="form-control"
    id="asInput7"
    name="northeast-states"
    onBlur={[Function]}
    onChange={[Function]}
    type="select"
    value="MD"
  >
    <optgroup
      label="New England States"
    >
      <option
        value="CN"
      >
        Connecticut
      </option>
      <option
        value="ME"
      >
        Maine
      </option>
      <option
        value="MA"
      >
        Massachusetts
      </option>
      <option
        value="NH"
      >
        New Hampshire
      </option>
      <option
        value="RI"
      >
        Rhode Island
      </option>
      <option
        value="VT"
      >
        Vermont
      </option>
    </optgroup>
    <optgroup
      label="Mid Atlantic States"
    >
      <option
        value="DE"
      >
        Delaware
      </option>
      <option
        value="MD"
      >
        Maryland
      </option>
      <option
        value="NJ"
      >
        New Jersey
      </option>
      <option
        value="NY"
      >
        New York
      </option>
      <option
        value="PA"
      >
        Pennsylvania
      </option>
      <option
        value="VA"
      >
        Virginia
      </option>
      <option
        value="DC"
      >
        Washington, DC
      </option>
      <option
        value="WV"
      >
        West Virginia
      </option>
    </optgroup>
  </select>
</div>
`;

exports[`Storyshots InputSelect with validation 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="asInput8"
  >
    Favorite Color
  </label>
  <select
    aria-describedby={undefined}
    className="form-control"
    id="asInput8"
    name="color"
    onBlur={[Function]}
    onChange={[Function]}
    type="select"
    value=""
  >
    <option
      value=""
    >
      
    </option>
    <option
      value="red"
    >
      red
    </option>
    <option
      value="orange"
    >
      orange
    </option>
    <option
      value="yellow"
    >
      yellow
    </option>
    <option
      value="green"
    >
      green
    </option>
    <option
      value="blue"
    >
      blue
    </option>
    <option
      value="purple"
    >
      purple
    </option>
  </select>
</div>
`;

exports[`Storyshots InputText minimal usage 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="asInput9"
  >
    First Name
  </label>
  <input
    aria-describedby={undefined}
    aria-invalid={false}
    className="form-control"
    disabled={false}
    id="asInput9"
    name="name"
    onBlur={[Function]}
    onChange={[Function]}
    placeholder={undefined}
    required={false}
    type="text"
    value="Foo Bar"
  />
</div>
`;

exports[`Storyshots InputText validation 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="asInput10"
  >
    Username
  </label>
  <input
    aria-describedby="undefined description-asInput10"
    aria-invalid={false}
    className="form-control"
    disabled={false}
    id="asInput10"
    name="username"
    onBlur={[Function]}
    onChange={[Function]}
    placeholder={undefined}
    required={false}
    type="text"
    value=""
  />
  <small
    className="form-text"
    id="description-asInput10"
  >
    The unique name that identifies you throughout the site.
  </small>
</div>
`;

exports[`Storyshots Modal basic usage 1`] = `
<div
  aria-labelledby="id11"
  aria-modal={true}
  className="modal show modal-open"
  role="dialog"
>
  <div
    className="modal-dialog"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <h5
          className="modal-title"
          id="id11"
        >
          Modal title.
        </h5>
        <button
          aria-label="Close"
          className="btn btn-light"
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
        </button>
      </div>
      <div
        className="modal-body"
      >
        <p>
          Modal body.
        </p>
      </div>
      <div
        className="modal-footer"
      >
        <button
          className="btn btn-secondary"
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Modal configurable buttons 1`] = `
<div
  aria-labelledby="id12"
  aria-modal={true}
  className="modal show modal-open"
  role="dialog"
>
  <div
    className="modal-dialog"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <h5
          className="modal-title"
          id="id12"
        >
          Modal title.
        </h5>
        <button
          aria-label="Close"
          className="btn btn-light"
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
        </button>
      </div>
      <div
        className="modal-body"
      >
        <p>
          Modal body.
        </p>
      </div>
      <div
        className="modal-footer"
      >
        <button
          className="btn btn-primary"
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          Blue button!
        </button>
        <button
          className="btn btn-danger"
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          Red button!
        </button>
        <button
          className="btn btn-success"
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          Green button!
        </button>
        <button
          className="btn btn-secondary"
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Modal configurable buttons that perform actions 1`] = `
<div
  aria-labelledby="id14"
  aria-modal={true}
  className="modal show modal-open"
  role="dialog"
>
  <div
    className="modal-dialog"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <h5
          className="modal-title"
          id="id14"
        >
          Modal title.
        </h5>
        <button
          aria-label="Close"
          className="btn btn-light"
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
        </button>
      </div>
      <div
        className="modal-body"
      >
        <p>
          Modal body.
        </p>
      </div>
      <div
        className="modal-footer"
      >
        <button
          className="btn btn-light"
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          Click me and check the console!
        </button>
        <button
          className="btn btn-secondary"
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Modal configurable close button 1`] = `
<div
  aria-labelledby="id15"
  aria-modal={true}
  className="modal show modal-open"
  role="dialog"
>
  <div
    className="modal-dialog"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <h5
          className="modal-title"
          id="id15"
        >
          Modal title.
        </h5>
        <button
          aria-label="SHOO!"
          className="btn btn-light"
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
        </button>
      </div>
      <div
        className="modal-body"
      >
        <p>
          Modal body.
        </p>
      </div>
      <div
        className="modal-footer"
      >
        <button
          className="btn btn-secondary"
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          SHOO!
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Modal configurable title and body 1`] = `
<div
  aria-labelledby="id13"
  aria-modal={true}
  className="modal show modal-open"
  role="dialog"
>
  <div
    className="modal-dialog"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <h5
          className="modal-title"
          id="id13"
        >
          Custom title!
        </h5>
        <button
          aria-label="Close"
          className="btn btn-light"
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
        </button>
      </div>
      <div
        className="modal-body"
      >
        <p>
          Custom body!
        </p>
      </div>
      <div
        className="modal-footer"
      >
        <button
          className="btn btn-dark"
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          Dark button!
        </button>
        <button
          className="btn btn-secondary"
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Modal modal invoked via a button 1`] = `
<div>
  <div
    aria-labelledby="id16"
    aria-modal={true}
    className="modal show"
    role="dialog"
  >
    <div
      className="modal-dialog"
    >
      <div
        className="modal-content"
      >
        <div
          className="modal-header"
        >
          <h5
            className="modal-title"
            id="id16"
          >
            I am the modal!
          </h5>
          <button
            aria-label="Close"
            className="btn btn-light"
            onBlur={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
          </button>
        </div>
        <div
          className="modal-body"
        >
          <p>
            I was invoked by a button!
          </p>
        </div>
        <div
          className="modal-footer"
        >
          <button
            className="btn btn-secondary"
            onBlur={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
            type="button"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
  <button
    className="btn btn-light"
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    Click me to open a modal!
  </button>
</div>
`;

exports[`Storyshots Modal modal with element body 1`] = `
<div
  aria-labelledby="id17"
  aria-modal={true}
  className="modal show modal-open"
  role="dialog"
>
  <div
    className="modal-dialog"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <h5
          className="modal-title"
          id="id17"
        >
          Modal title.
        </h5>
        <button
          aria-label="Close"
          className="btn btn-light"
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
        </button>
      </div>
      <div
        className="modal-body"
      >
        <div>
          <p>
            Enter your e-mail address to receive free cat facts!
          </p>
          <div
            className="form-group"
          >
            <label
              htmlFor="asInput18"
            >
              E-Mail Address
            </label>
            <input
              aria-describedby={undefined}
              aria-invalid={false}
              className="form-control"
              disabled={false}
              id="asInput18"
              name="e-mail"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder={undefined}
              required={false}
              type="text"
              value=""
            />
          </div>
          <button
            className="btn"
            onBlur={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
            type="button"
          >
            Get my facts!
          </button>
        </div>
      </div>
      <div
        className="modal-footer"
      >
        <button
          className="btn btn-secondary"
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Paragon Welcome 1`] = `
<div
  className="css-jail"
  style={
    Object {
      "fontFamily": "sans-serif",
    }
  }
>
  <div
    style={
      Object {
        "fontFamily": "\\"Helvetica Neue\\", Helvetica, \\"Segoe UI\\", Arial, freesans, sans-serif",
        "lineHeight": 1.4,
        "margin": 15,
        "maxWidth": 600,
      }
    }
  >
    <h1>
      💎 Paragon
    </h1>
    <p>
      This is a documentation and demo space for the Paragon accessible UI component library. Better docs coming soon, but for now, check out our existing components via the links to the left-hand side.
    </p>
    <p>
      Documentation generated with 
      <a
        href="https://github.com/kadirahq/react-storybook"
        rel="noopener noreferrer"
        target="_blank"
      >
        React Storybook
      </a>
      .
    </p>
  </div>
</div>
`;

exports[`Storyshots RadioButtonGroup selected minimal usage 1`] = `
<div
  aria-label="Radio Button Group"
  onChange={[Function]}
  role="radiogroup"
  tabIndex={-1}
>
  <div>
    <input
      aria-checked={false}
      data-index={0}
      defaultChecked={false}
      name="rbg"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      type="radio"
      value="jaebaebae"
    />
    First Value
  </div>
  <div>
    <input
      aria-checked={true}
      data-index={1}
      defaultChecked={true}
      name="rbg"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      type="radio"
      value="value2"
    />
    Second Value
  </div>
  <div>
    <input
      aria-checked={false}
      data-index={2}
      defaultChecked={false}
      name="rbg"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      type="radio"
      value="value3"
    />
    Third Value
  </div>
</div>
`;

exports[`Storyshots RadioButtonGroup unselected minimal usage 1`] = `
<div
  aria-label="Radio Button Group"
  onChange={[Function]}
  role="radiogroup"
  tabIndex={-1}
>
  <div>
    <input
      aria-checked={false}
      data-index={0}
      defaultChecked={false}
      name="rbg"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      type="radio"
      value="jaebaebae"
    />
    First Value
  </div>
  <div>
    <input
      aria-checked={false}
      data-index={1}
      defaultChecked={false}
      name="rbg"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      type="radio"
      value="value2"
    />
    Second Value
  </div>
  <div>
    <input
      aria-checked={false}
      data-index={2}
      defaultChecked={false}
      name="rbg"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      type="radio"
      value="value3"
    />
    Third Value
  </div>
</div>
`;

exports[`Storyshots StatusAlert Non-dismissible alert 1`] = `
<div
  className="alert fade alert-danger show"
  hidden={false}
  role="alert"
>
  <div
    className="alert-dialog"
  >
    You can't get rid of me!
  </div>
</div>
`;

exports[`Storyshots StatusAlert alert invoked via a button 1`] = `
<div>
  <div
    className="alert fade alert-dismissible alert-success"
    hidden={true}
    role="alert"
  >
    <button
      aria-label="Close"
      className="btn close"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
    <div
      className="alert-dialog"
    >
      Success! You triggered the alert!
    </div>
  </div>
  <button
    className="btn btn-light"
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    Click me to open a Status Alert!
  </button>
</div>
`;

exports[`Storyshots StatusAlert alert with a link 1`] = `
<div
  className="alert fade alert-dismissible alert-info show"
  hidden={false}
  role="alert"
>
  <button
    aria-label="Close"
    className="btn close"
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    <span
      aria-hidden="true"
    >
      ×
    </span>
  </button>
  <div
    className="alert-dialog"
  >
    <div>
      <span>
        Love cats? 
      </span>
      <a
        href="https://www.factretriever.com/cat-facts"
        rel="noopener noreferrer"
        target="_blank"
      >
        Click me!
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots StatusAlert basic usage 1`] = `
<div
  className="alert fade alert-dismissible alert-warning show"
  hidden={false}
  role="alert"
>
  <button
    aria-label="Close"
    className="btn close"
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    <span
      aria-hidden="true"
    >
      ×
    </span>
  </button>
  <div
    className="alert-dialog"
  >
    You have a status alert!
  </div>
</div>
`;

exports[`Storyshots StatusAlert danger alert 1`] = `
<div
  className="alert fade alert-dismissible alert-danger show"
  hidden={false}
  role="alert"
>
  <button
    aria-label="Close"
    className="btn close"
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    <span
      aria-hidden="true"
    >
      ×
    </span>
  </button>
  <div
    className="alert-dialog"
  >
    Error!
  </div>
</div>
`;

exports[`Storyshots StatusAlert informational alert 1`] = `
<div
  className="alert fade alert-dismissible alert-info show"
  hidden={false}
  role="alert"
>
  <button
    aria-label="Close"
    className="btn close"
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    <span
      aria-hidden="true"
    >
      ×
    </span>
  </button>
  <div
    className="alert-dialog"
  >
    Get some info here!
  </div>
</div>
`;

exports[`Storyshots StatusAlert success alert 1`] = `
<div
  className="alert fade alert-dismissible alert-success show"
  hidden={false}
  role="alert"
>
  <button
    aria-label="Close"
    className="btn close"
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    <span
      aria-hidden="true"
    >
      ×
    </span>
  </button>
  <div
    className="alert-dialog"
  >
    Success!
  </div>
</div>
`;

exports[`Storyshots Table default heading 1`] = `
<table
  className="table"
>
  <caption>
    Famous Internet Cats
  </caption>
  <thead
    className="thead-default"
  >
    <tr>
      <th
        className=""
        scope="col"
      >
        Name
      </th>
      <th
        className=""
        scope="col"
      >
        Famous For
      </th>
      <th
        className=""
        scope="col"
      >
        <span
          className="sr-only"
        />
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        Lil Bub
      </td>
      <td>
        weird tongue
      </td>
      <td>
        brown tabby
      </td>
    </tr>
    <tr>
      <td>
        Grumpy Cat
      </td>
      <td>
        serving moods
      </td>
      <td>
        siamese
      </td>
    </tr>
    <tr>
      <td>
        Smoothie
      </td>
      <td>
        modeling
      </td>
      <td>
        orange tabby
      </td>
    </tr>
    <tr>
      <td>
        Maru
      </td>
      <td>
        being a lovable oaf
      </td>
      <td>
        brown tabby
      </td>
    </tr>
    <tr>
      <td>
        Keyboard Cat
      </td>
      <td>
        piano virtuoso
      </td>
      <td>
        orange tabby
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Table responsive 1`] = `
<table
  className="table table-responsive"
>
  <caption>
    Famous Internet Cats
  </caption>
  <thead
    className=""
  >
    <tr>
      <th
        className=""
        scope="col"
      >
        Name
      </th>
      <th
        className=""
        scope="col"
      >
        Famous For
      </th>
      <th
        className=""
        scope="col"
      >
        <span
          className="sr-only"
        />
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        Lil Bub
      </td>
      <td>
        weird tongue
      </td>
      <td>
        brown tabby
      </td>
    </tr>
    <tr>
      <td>
        Grumpy Cat
      </td>
      <td>
        serving moods
      </td>
      <td>
        siamese
      </td>
    </tr>
    <tr>
      <td>
        Smoothie
      </td>
      <td>
        modeling
      </td>
      <td>
        orange tabby
      </td>
    </tr>
    <tr>
      <td>
        Maru
      </td>
      <td>
        being a lovable oaf
      </td>
      <td>
        brown tabby
      </td>
    </tr>
    <tr>
      <td>
        Keyboard Cat
      </td>
      <td>
        piano virtuoso
      </td>
      <td>
        orange tabby
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Table sortable 1`] = `
<table
  className="table"
>
  <caption>
    Famous Internet Cats
  </caption>
  <thead
    className=""
  >
    <tr>
      <th
        className="sortable"
        scope="col"
      >
        <button
          className="btn"
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          <span>
            Name
            <span
              className="sr-only"
            >
               
              sort descending
            </span>
             
            <span
              aria-hidden={true}
              className="fa fa-sort-desc"
            />
          </span>
        </button>
      </th>
      <th
        className=""
        scope="col"
      >
        Famous For
      </th>
      <th
        className=""
        scope="col"
      >
        <span
          className="sr-only"
        />
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        Smoothie
      </td>
      <td>
        modeling
      </td>
      <td>
        orange tabby
      </td>
    </tr>
    <tr>
      <td>
        Maru
      </td>
      <td>
        being a lovable oaf
      </td>
      <td>
        brown tabby
      </td>
    </tr>
    <tr>
      <td>
        Lil Bub
      </td>
      <td>
        weird tongue
      </td>
      <td>
        brown tabby
      </td>
    </tr>
    <tr>
      <td>
        Keyboard Cat
      </td>
      <td>
        piano virtuoso
      </td>
      <td>
        orange tabby
      </td>
    </tr>
    <tr>
      <td>
        Grumpy Cat
      </td>
      <td>
        serving moods
      </td>
      <td>
        siamese
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Table table-striped 1`] = `
<table
  className="table table-striped"
>
  <caption>
    Famous Internet Cats
  </caption>
  <thead
    className=""
  >
    <tr>
      <th
        className=""
        scope="col"
      >
        Name
      </th>
      <th
        className=""
        scope="col"
      >
        Famous For
      </th>
      <th
        className=""
        scope="col"
      >
        <span
          className="sr-only"
        />
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        Lil Bub
      </td>
      <td>
        weird tongue
      </td>
      <td>
        brown tabby
      </td>
    </tr>
    <tr>
      <td>
        Grumpy Cat
      </td>
      <td>
        serving moods
      </td>
      <td>
        siamese
      </td>
    </tr>
    <tr>
      <td>
        Smoothie
      </td>
      <td>
        modeling
      </td>
      <td>
        orange tabby
      </td>
    </tr>
    <tr>
      <td>
        Maru
      </td>
      <td>
        being a lovable oaf
      </td>
      <td>
        brown tabby
      </td>
    </tr>
    <tr>
      <td>
        Keyboard Cat
      </td>
      <td>
        piano virtuoso
      </td>
      <td>
        orange tabby
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Table unstyled 1`] = `
<table
  className="table"
>
  <caption>
    Famous Internet Cats
  </caption>
  <thead
    className=""
  >
    <tr>
      <th
        className=""
        scope="col"
      >
        Name
      </th>
      <th
        className=""
        scope="col"
      >
        Famous For
      </th>
      <th
        className=""
        scope="col"
      >
        <span
          className="sr-only"
        />
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        Lil Bub
      </td>
      <td>
        weird tongue
      </td>
      <td>
        brown tabby
      </td>
    </tr>
    <tr>
      <td>
        Grumpy Cat
      </td>
      <td>
        serving moods
      </td>
      <td>
        siamese
      </td>
    </tr>
    <tr>
      <td>
        Smoothie
      </td>
      <td>
        modeling
      </td>
      <td>
        orange tabby
      </td>
    </tr>
    <tr>
      <td>
        Maru
      </td>
      <td>
        being a lovable oaf
      </td>
      <td>
        brown tabby
      </td>
    </tr>
    <tr>
      <td>
        Keyboard Cat
      </td>
      <td>
        piano virtuoso
      </td>
      <td>
        orange tabby
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Tabs basic usage 1`] = `
<div>
  <ul
    className="nav nav-tabs"
    role="tablist"
  >
    <li
      className="nav-item"
      id="tab-label-tabInterface19-0"
    >
      <a
        aria-controls="tab-panel-tabInterface19-0"
        aria-selected={true}
        className="nav-link active"
        onClick={[Function]}
        role="tab"
        tabIndex={0}
      >
        Panel 1
      </a>
    </li>
    <li
      className="nav-item"
      id="tab-label-tabInterface19-1"
    >
      <a
        aria-controls="tab-panel-tabInterface19-1"
        aria-selected={false}
        className="nav-link"
        onClick={[Function]}
        role="tab"
        tabIndex={-1}
      >
        Panel 2
      </a>
    </li>
    <li
      className="nav-item"
      id="tab-label-tabInterface19-2"
    >
      <a
        aria-controls="tab-panel-tabInterface19-2"
        aria-selected={false}
        className="nav-link"
        onClick={[Function]}
        role="tab"
        tabIndex={-1}
      >
        Panel 3
      </a>
    </li>
  </ul>
  <div
    className="tab-content"
  >
    <div
      aria-hidden={false}
      aria-labelledby="tab-label-tabInterface19-0"
      className="tab-pane active"
      id="tab-panel-tabInterface19-0"
      role="tabpanel"
    >
      <div>
        Hello I am the first panel
      </div>
    </div>
    <div
      aria-hidden={true}
      aria-labelledby="tab-label-tabInterface19-1"
      className="tab-pane"
      id="tab-panel-tabInterface19-1"
      role="tabpanel"
    >
      <div>
        Hello I am the second panel
      </div>
    </div>
    <div
      aria-hidden={true}
      aria-labelledby="tab-label-tabInterface19-2"
      className="tab-pane"
      id="tab-panel-tabInterface19-2"
      role="tabpanel"
    >
      <div>
        Hello I am the third panel
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Textarea minimal usage 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="asInput20"
  >
    First Name
  </label>
  <textarea
    aria-describedby={undefined}
    aria-invalid={false}
    className="form-control"
    disabled={false}
    id="asInput20"
    name="name"
    onBlur={[Function]}
    onChange={[Function]}
    placeholder={undefined}
    required={false}
    type="text"
    value="Foo Bar"
  />
</div>
`;

exports[`Storyshots Textarea scrollable 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="asInput21"
  >
    Information
  </label>
  <textarea
    aria-describedby={undefined}
    aria-invalid={false}
    className="form-control"
    disabled={false}
    id="asInput21"
    name="name"
    onBlur={[Function]}
    onChange={[Function]}
    placeholder={undefined}
    required={false}
    type="text"
    value="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
  />
</div>
`;

exports[`Storyshots Textarea validation 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="asInput22"
  >
    Username
  </label>
  <textarea
    aria-describedby="undefined description-asInput22"
    aria-invalid={false}
    className="form-control"
    disabled={false}
    id="asInput22"
    name="username"
    onBlur={[Function]}
    onChange={[Function]}
    placeholder={undefined}
    required={false}
    type="text"
    value=""
  />
  <small
    className="form-text"
    id="description-asInput22"
  >
    The unique name that identifies you throughout the site.
  </small>
</div>
`;
